// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GalleryItem [GalleryItem - disabled: false] Component basic tests matches the snapshot 1`] = `
<styled.div
  disabled={false}
>
  <Component
    containerRef={
      Object {
        "current": null,
      }
    }
    pictureData={
      Object {
        "alt": "alt",
        "defaultImgSrc": "img.jpg",
        "responsiveSrcList": Array [
          Object {
            "media": "(min-width: 600px)",
            "src": "img-big.jpg",
          },
        ],
      }
    }
  />
</styled.div>
`;

exports[`GalleryItem [GalleryItem - disabled: true] Component basic tests matches the snapshot 1`] = `
<styled.div
  disabled={true}
>
  <Component
    containerRef={
      Object {
        "current": null,
      }
    }
    pictureData={
      Object {
        "alt": "alt",
        "defaultImgSrc": "img.jpg",
        "responsiveSrcList": Array [
          Object {
            "media": "(min-width: 600px)",
            "src": "img-big.jpg",
          },
        ],
      }
    }
  />
</styled.div>
`;

exports[`GalleryItem [GalleryItem - imageIdx: 1] Component basic tests matches the snapshot 1`] = `
<styled.div
  disabled={true}
>
  <Component
    containerRef={
      Object {
        "current": null,
      }
    }
    pictureData={
      Object {
        "alt": "alt",
        "defaultImgSrc": "img.jpg",
        "responsiveSrcList": Array [
          Object {
            "media": "(min-width: 600px)",
            "src": "img-big.jpg",
          },
        ],
      }
    }
  />
</styled.div>
`;
